# learn_ai_agents

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/learn_ai_agents/: .coveragerc  README.md  __main__.py  app_factory.py  asgi.py  docker-compose.yaml  pyproject.toml  settings.py  settings.yaml
src/learn_ai_agents/application/inbound_ports/: __init__.py
src/learn_ai_agents/application/outbound_ports/: __init__.py
src/learn_ai_agents/data/llm_evaluation/datasets/: astarion_conversation_01.json  gale_conversation_03.json
src/learn_ai_agents/data/llm_evaluation/results/: ragas_evaluation_results.json
src/learn_ai_agents/domain/exceptions/: __init__.py
src/learn_ai_agents/infrastructure/: __init__.py
src/learn_ai_agents/infrastructure/outbound/: __init__.py
src/learn_ai_agents/learn_ai_agents/: __main__.py  app_factory.py  asgi.py  settings.py
src/learn_ai_agents/learn_ai_agents/application/: __init__.py
src/learn_ai_agents/learn_ai_agents/application/dtos/: __init__.py
src/learn_ai_agents/learn_ai_agents/application/dtos/agents/: __init__.py  basic_answer.py  character_chat.py
src/learn_ai_agents/learn_ai_agents/application/dtos/content_indexer/: __init__.py  document_splitting.py  source_ingestion.py  vectorization.py
src/learn_ai_agents/learn_ai_agents/application/dtos/discovery/: discovery.py
src/learn_ai_agents/learn_ai_agents/application/inbound_ports/: basic_answer.py
src/learn_ai_agents/learn_ai_agents/application/inbound_ports/agents/: __init__.py  agent_answer.py  basic_answer.py  character_chat.py
src/learn_ai_agents/learn_ai_agents/application/inbound_ports/content_indexer/: __init__.py  document_splitting.py  source_ingestion.py  vectorization.py
src/learn_ai_agents/learn_ai_agents/application/inbound_ports/discovery/: discovery.py
src/learn_ai_agents/learn_ai_agents/application/outbound_ports/: agent_engine.py  llm_model.py
src/learn_ai_agents/learn_ai_agents/application/outbound_ports/agents/: __init__.py  agent_engine.py  chat_history.py  tools.py  tracing.py
src/learn_ai_agents/learn_ai_agents/application/outbound_ports/content_indexer/: __init__.py
src/learn_ai_agents/learn_ai_agents/application/outbound_ports/database/: __init__.py
src/learn_ai_agents/learn_ai_agents/application/use_cases/: __init__.py
src/learn_ai_agents/learn_ai_agents/application/use_cases/basic_answer/: __init__.py  basic_answer.py  mapper.py
src/learn_ai_agents/learn_ai_agents/application/use_cases/discovery/: __init__.py  use_case.py
src/learn_ai_agents/learn_ai_agents/application/use_cases/mappers/: agent_answer_mapper.py  character_chat_mapper.py
src/learn_ai_agents/learn_ai_agents/domain/: __init__.py
src/learn_ai_agents/learn_ai_agents/domain/exceptions/: __init__.py  _base.py  agents.py  components.py  domain.py
src/learn_ai_agents/learn_ai_agents/domain/models/: __init__.py  messages.py
src/learn_ai_agents/learn_ai_agents/domain/services/: __init__.py
src/learn_ai_agents/learn_ai_agents/infrastructure/bootstrap/: __init__.py  _utils.py  agents_container.py  app_container.py  components_container.py  use_cases_container.py
src/learn_ai_agents/learn_ai_agents/infrastructure/helpers/: generators.py
src/learn_ai_agents/learn_ai_agents/infrastructure/inbound/: __init__.py  exception_handlers.py
src/learn_ai_agents/learn_ai_agents/logging/: __init__.py
src/learn_ai_agents/logging/: config.py
src/learn_ai_agents/scripts/llm_evaluation/: evaluate_ragas.py
src/learn_ai_agents/tests/: __init__.py
src/learn_ai_agents/tests/common/: __init__.py  fake_chat_history.py  fake_database.py  fake_embedder.py  fake_llm_adapter.py  fake_tracer.py  fake_vector_store.py  test_helpers.py
src/learn_ai_agents/tests/unit/: __init__.py
src/learn_ai_agents/tests/unit/endpoints/: __init__.py  base_test.py
src/streamlit_ui/: .env.example  README.md  pyproject.toml
src/streamlit_ui/streamlit_ui/: Home_Page.py  __init__.py
src/streamlit_ui/streamlit_ui/pages/: 1_Chat.py  2_Conversation_History.py  3_Character_Chat.py
src/streamlit_ui/streamlit_ui/utils/: __init__.py  mongo_client.py
tests/: __init__.py
(+134 files in other folders)
