[project]
name = "learn-ai-agents"
version = "0.1.0"
description = "A didactic project for learning how to create AI Agents following Hexagonal Architecture."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "typer==0.20.0",
  "fastapi[standard]==0.120.0",
  "loguru==0.7.3",
  "pydantic==2.12.3",
  "pydantic-settings==2.11.0",
  "ipykernel==7.0.1",
  "types-pyyaml>=6.0.12.20250915",
  "langchain==1.0.0",
  "langchain-groq==1.0.0",
  "langgraph==1.0.1",
  "langgraph-checkpoint-mongodb==0.2.2",
  "motor==3.7.1",
  "odmantic>=1.0.2",
  "langchain-community>=0.4.1",
  "ddgs>=9.5.5",
  "beautifulsoup4>=4.12.0",
  "requests>=2.31.0",
  "types-requests>=2.32.4.20250913",
  "bs4>=0.0.2",
  "markdownify>=0.13.1",
  "qdrant-client>=1.7.0",
  "sentence-transformers>=5.1.2",
  "opik>=1.9.33",
  "ragas>=0.4.3",
  "uvicorn",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["learn_ai_agents"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # Pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
]
ignore = [
  "B008",  # Allow function calls in argument defaults (needed for FastAPI Depends)
]

[tool.mypy]
ignore_missing_imports = true
